WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166904
Missing logging in IconLoader::startLoading
https://bugs.webkit.org/show_bug.cgi?id=166904
Summary
Missing logging in IconLoader::startLoading
Keith Rollin
Reported
2017-01-10 14:01:01 PST
The LOG_ERROR in startLoading references 'resourceRequest', which has been WTF::Moved as part of a preceding function call. As such, the logging statement doesn't print out a possibly useful URL.
Attachments
Patch
(2.74 KB, patch)
2017-01-10 14:03 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Rollin
Comment 1
2017-01-10 14:03:53 PST
Created
attachment 298511
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-10 15:10:47 PST
Comment on
attachment 298511
[details]
Patch Clearing flags on attachment: 298511 Committed
r210562
: <
http://trac.webkit.org/changeset/210562
>
WebKit Commit Bot
Comment 3
2017-01-10 15:10:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug