Missing logging in IconLoader::startLoading https://bugs.webkit.org/show_bug.cgi?id=166904

Reviewed by Sam Weinig.

The LOG_ERROR in startLoading references 'resourceRequest', which has
been WTF::Moved as part of a preceding function call. As such, the
logging statement doesn't print out a possibly useful URL. Fix this by
making a copy of the URL before it's affected by the Move.

No new tests -- change only affects logging code.

* loader/icon/IconLoader.cpp:
(WebCore::IconLoader::startLoading):


Canonical link: https://commits.webkit.org/184007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210562 268f45cc-cd09-0410-ab3c-d52691b4dbfc